--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -26,11 +26,18 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
   --scrollbar-track: var(--body-background);
 
   &[data-scheme="dark"] {
+    /**
+    Originals
     --body-background: #303030;
+    --body-text-color: rgba(255, 255, 255, 0.7);
     --accent-color: #ecf0f1;
     --accent-color-darker: #bdc3c7;
+     */
+    --body-background:#181825;
+    --body-text-color: rgba(203, 166, 247, 0.7);
+    --accent-color: #cba6f7;
+    --accent-color-darker: hsl(267deg, 84%, 68%);
     --accent-color-text: #000;
-    --body-text-color: rgba(255, 255, 255, 0.7);
     --scrollbar-thumb: hsl(0, 0%, 40%);
     --scrollbar-track: var(--body-background);
   }
@@ -78,12 +85,21 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
   }
 
   &[data-scheme="dark"] {
+    /**
+    originals
     --card-background: #424242;
     --card-background-selected: rgba(255, 255, 255, 0.16);
     --card-text-color-main: rgba(255, 255, 255, 0.9);
     --card-text-color-secondary: rgba(255, 255, 255, 0.7);
     --card-text-color-tertiary: rgba(255, 255, 255, 0.5);
     --card-separator-color: rgba(255, 255, 255, 0.12);
+     */
+    --card-background: #1e1e2e;
+    --card-background-selected: rgba(30, 30, 46, 0.16);
+    --card-text-color-main: rgb(205, 214, 244);
+    --card-text-color-secondary: rgba(180, 190, 254, 0.7);
+    --card-text-color-tertiary: rgba(180, 190, 254, 0.5);
+    --card-separator-color: rgba(30, 30, 46, 0.12);
   }
 }
 
