--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -37,11 +37,16 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
     --body-text-color: rgba(255, 255, 255, 0.7);
     --accent-color: #ecf0f1;
     --accent-color-darker: #bdc3c7;
-     */
-    --body-background:#181825;
+
+    mauves
     --body-text-color: rgba(203, 166, 247, 0.7);
     --accent-color: #cba6f7;
     --accent-color-darker: hsl(267deg, 84%, 68%);
+     */
+    --body-background:#181825;
+    --body-text-color: rgba(138, 154, 254, 0.7);
+    --accent-color: hsl(232deg, 99%, 77%);
+    --accent-color-darker: hsl(231deg, 97%, 69%);
     --accent-color-text: #000;
     --scrollbar-thumb: hsl(0, 0%, 40%);
     --scrollbar-track: var(--body-background);
@@ -55,7 +60,7 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
   --sys-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Droid Sans", "Helvetica Neue";
   --zh-font-family: "PingFang SC", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei";
 
-  --base-font-family: "Lato", var(--sys-font-family), var(--zh-font-family), sans-serif;
+  --base-font-family: "Helvetica", var(--sys-font-family), var(--zh-font-family), sans-serif;
   --code-font-family: Menlo, Monaco, Consolas, "Courier New", var(--zh-font-family), monospace;
 }
 
@@ -98,12 +103,20 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
     --card-text-color-secondary: rgba(255, 255, 255, 0.7);
     --card-text-color-tertiary: rgba(255, 255, 255, 0.5);
     --card-separator-color: rgba(255, 255, 255, 0.12);
+
+    mauve
+    --card-text-color-main: hsl(267deg, 46%, 67%);
+
+    lavender
+    --card-text-color-main: hsl(232deg, 65%, 77%);
+    --card-text-color-main: hsl(231deg, 60%, 70%);
+
      */
     --card-background: #1e1e2e;
     --card-background-selected: rgba(30, 30, 46, 0.16);
-    --card-text-color-main: rgb(205, 214, 244);
-    --card-text-color-secondary: rgba(180, 190, 254, 0.7);
-    --card-text-color-tertiary: rgba(180, 190, 254, 0.5);
+    --card-text-color-main: rgba(145, 215, 227, 0.8);
+    --card-text-color-secondary: rgba(145, 215, 227, 0.7);
+    --card-text-color-tertiary: rgba(145, 215, 227, 0.6);
     --card-separator-color: rgba(30, 30, 46, 0.12);
   }
 }
@@ -156,7 +169,7 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
      */
     --code-background-color: #24273a;
     --code-text-color: #a6e3a1;
-    --table-border-color: #94e2d5;
+    --table-border-color: #89dceb;
     --tr-even-background-color: #181825;
     --blockquote-background-color: #24273a;
   }
