--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -112,11 +112,11 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
     --card-text-color-main: hsl(231deg, 60%, 70%);
 
      */
-    --card-background: #1e1e2e;
+    --card-background: #181825;
     --card-background-selected: rgba(30, 30, 46, 0.16);
     --card-text-color-main: rgba(145, 215, 227, 0.8);
-    --card-text-color-secondary: rgba(145, 215, 227, 0.7);
-    --card-text-color-tertiary: rgba(145, 215, 227, 0.6);
+    --card-text-color-secondary: rgba(145, 215, 227, 0.6);
+    --card-text-color-tertiary: rgba(145, 215, 227, 0.5);
     --card-separator-color: rgba(30, 30, 46, 0.12);
   }
 }
@@ -180,11 +180,19 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 *   Thanks to https://www.figma.com/community/plugin/744987207861965946/Shadow-picker
 */
 :root {
+
+  /** originals
   --shadow-l1: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06), 0px 0px 1px rgba(0, 0, 0, 0.04);
   --shadow-l2: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
   --shadow-l3: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
   --shadow-l4: 0px 24px 32px rgba(0, 0, 0, 0.04), 0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04),
   0px 0px 1px rgba(0, 0, 0, 0.04);
+   */
+  --shadow-l1: 0px 4px 8px rgba(138, 154, 254, 0.06), 0px 0px 2px rgba(138, 154, 254, 0.08), 0px 0px 1px rgba(138, 154, 254, 0.06);
+  --shadow-l2: 0px 10px 20px rgba(138, 154, 254, 0.2), 0px 2px 6px rgba(138, 154, 254, 0.2), 0px 0px 1px rgba(138, 154, 254, 0.2);
+  --shadow-l3: 0px 10px 20px rgba(138, 154, 254, 0.06), 0px 2px 6px rgba(138, 154, 254, 0.06), 0px 0px 1px rgba(138, 154, 254, 0.06);
+  --shadow-l4: 0px 24px 32px rgba(138, 154, 254, 0.06), 0px 16px 24px rgba(138, 154, 254, 0.06), 0px 4px 8px rgba(138, 154, 254, 0.06),
+  0px 0px 1px rgba(138, 154, 254, 0.06);
 }
 
 [data-scheme="light"] {
