Messes with fonts lol

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -10,8 +10,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 200;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-200.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-200.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-200.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-200.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-200italic - latin-ext */
@@ -20,8 +20,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 200;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-200italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-200italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-200italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-200italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-300 - latin-ext */
@@ -30,8 +30,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 300;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-300.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-300.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-300.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-300.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-300italic - latin-ext */
@@ -40,8 +40,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 300;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-300italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-300italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-300italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-300italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-regular - latin-ext */
@@ -50,8 +50,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-italic - latin-ext */
@@ -60,8 +60,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 400;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-500 - latin-ext */
@@ -70,8 +70,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 500;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-500.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-500.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-500.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-500.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-500italic - latin-ext */
@@ -80,8 +80,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 500;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-500italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-500italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-500italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-500italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-600 - latin-ext */
@@ -90,8 +90,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 600;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-600.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-600.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-600.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-600.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-600italic - latin-ext */
@@ -100,8 +100,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 600;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-600italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-600italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-600italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-600italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-700 - latin-ext */
@@ -110,8 +110,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-700.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-700.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-700.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-700.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-700italic - latin-ext */
@@ -120,8 +120,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 700;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-700italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-700italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-700italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-700italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-800 - latin-ext */
@@ -130,8 +130,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 800;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-800.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-800.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-800.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-800.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-800italic - latin-ext */
@@ -140,8 +140,8 @@ Self-hosted fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 800;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-800italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-800italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-800italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-800italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 
@@ -173,12 +173,15 @@ Self-hosted fonts
 
 /**
 *   Global font family
+*   --sys-font-family: 'Atkinson Hyperlegible Next', "AppleGothic", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue";
+*   --zh-font-family: "PingFang SC", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei";
+*   --base-font-family: 'Atkinson Hyperlegible Next', var(--sys-font-family), var(--zh-font-family), sans-serif;
 */
 :root {
-  --sys-font-family: 'Atkinson Hyperlegible Next', "AppleGothic", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue";
+  --sys-font-family: 'Atkinson Hyperlegible Next', sans-serif;
   --zh-font-family: "PingFang SC", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei";
 
-  --base-font-family: 'Atkinson Hyperlegible Next', var(--sys-font-family), var(--zh-font-family), sans-serif;
+  --base-font-family: 'Atkinson Hyperlegible Next', sans-serif;
   --code-font-family: Menlo, Monaco, Consolas, "Courier New", var(--zh-font-family), monospace;
 }
 
