--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -178,10 +178,10 @@ Self-hosted fonts
 *   --base-font-family: 'Atkinson Hyperlegible Next', var(--sys-font-family), var(--zh-font-family), sans-serif;
 */
 :root {
-  --sys-font-family: 'Atkinson Hyperlegible Next', sans-serif;
+  --sys-font-family: 'Atkinson Hyperlegible Next', 'Tahoma', sans-serif;
   --zh-font-family: "PingFang SC", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei";
 
-  --base-font-family: 'Atkinson Hyperlegible Next', sans-serif;
+  --base-font-family: 'Atkinson Hyperlegible Next', 'Tahoma', sans-serif;
   --code-font-family: Menlo, Monaco, Consolas, "Courier New", var(--zh-font-family), monospace;
 }
 
