Fixes some font source paths

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -51,8 +51,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-italic - latin-ext */
@@ -131,7 +131,7 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 800;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-800.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-800.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-800.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
@@ -141,8 +141,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 800;
-  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-800italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-800italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-800italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-800italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 
