Trying to get fonts to load consistently

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -297,3 +297,5 @@ Thanks: https://gwfh.mranftl.com/fonts
     text-align: left;
   }
 }
+
+* {font-family: "Atkinson Hyperlegible Next", "Tahoma", sans-serif;}
