--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -282,6 +282,7 @@ Thanks: https://gwfh.mranftl.com/fonts
 
 //Centers article content with exceptions
 .article-content {
+  font-family:  "Atkinson Hyperlegible Next", "Tahoma", sans-serif;
   font-weight: 400;
   text-align: center;
   ol {
@@ -298,4 +299,4 @@ Thanks: https://gwfh.mranftl.com/fonts
   }
 }
 
-* {font-family: "Atkinson Hyperlegible Next", "Tahoma", sans-serif;}
+body {font-family: "Atkinson Hyperlegible Next", "Tahoma", sans-serif;}
