--- a/layouts/partials/footer/components/custom-font.html
+++ b/layouts/partials/footer/components/custom-font.html
@@ -1,7 +1,7 @@
 <script>
     (function () {
         const customFont = document.createElement('link');
-        customFont.href = "/fonts/atkinson-hyperlegible-next-v4-latin-ext-200italic.woff2";
+        customFont.href = "../../../../assets/scss/custom.scss ";
 
         customFont.type = "text/css";
         customFont.rel = "stylesheet";
