--- a/layouts/partials/footer/components/custom-font.html
+++ b/layouts/partials/footer/components/custom-font.html
@@ -1,7 +1,7 @@
 <script>
     (function () {
         const customFont = document.createElement('link');
-        customFont.href = "../../../../assets/scss/custom.scss ";
+        customFont.href = " ";
 
         customFont.type = "text/css";
         customFont.rel = "stylesheet";
