--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -11,8 +11,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 200;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-200.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-200.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-200.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-200.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-200italic - latin-ext */
@@ -21,8 +21,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 200;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-200italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-200italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-200italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-200italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-300 - latin-ext */
@@ -31,8 +31,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 300;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-300.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-300.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-300.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-300.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-300italic - latin-ext */
@@ -41,8 +41,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 300;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-300italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-300italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-300italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-300italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-regular - latin-ext */
@@ -51,8 +51,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 400;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-italic - latin-ext */
@@ -61,8 +61,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 400;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-500 - latin-ext */
@@ -71,8 +71,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 500;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-500.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-500.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-500.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-500.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-500italic - latin-ext */
@@ -81,8 +81,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 500;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-500italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-500italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-500italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-500italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-600 - latin-ext */
@@ -91,8 +91,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 600;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-600.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-600.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-600.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-600.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-600italic - latin-ext */
@@ -101,8 +101,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 600;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-600italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-600italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-600italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-600italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-700 - latin-ext */
@@ -111,8 +111,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 700;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-700.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-700.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-700.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-700.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-700italic - latin-ext */
@@ -121,8 +121,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 700;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-700italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-700italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-700italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-700italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-800 - latin-ext */
@@ -131,8 +131,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: normal;
   font-weight: 800;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-800.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-800.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-800.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-800.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 /* atkinson-hyperlegible-next-800italic - latin-ext */
@@ -141,8 +141,8 @@ Thanks: https://gwfh.mranftl.com/fonts
   font-family: 'Atkinson Hyperlegible Next';
   font-style: italic;
   font-weight: 800;
-  src: url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-800italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  url('/fonts/atkinson-hyperlegible-next-v4-latin-ext-800italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  src: url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-800italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  url('../fonts/atkinson-hyperlegible-next-v4-latin-ext-800italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
 
